[package]
name = "swf-renderer"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF renderer"
documentation = "https://github.com/open-flash/swf-renderer"
homepage = "https://github.com/open-flash/swf-renderer"
repository = "https://github.com/open-flash/swf-renderer"
readme = "./README.md"
keywords = ["renderer", "swf", "flash", "gfx"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
name = "swf_renderer"
path = "src/lib.rs"

[[bin]]
name = "swf-renderer"
path = "src/main.rs"

[dependencies]
lyon = "^0.14.1"
shaderc = { version = "^0.6.1", features = ["build-from-source"] }
swf-tree = "^0.8.0"
gfx-hal = {git = "https://github.com/gfx-rs/gfx.git", rev="8c8c3cd0da39fc64aeac6fb1bb5d5864bb33d2df"}
gfx-backend-vulkan = {git = "https://github.com/gfx-rs/gfx.git", rev="8c8c3cd0da39fc64aeac6fb1bb5d5864bb33d2df"}
env_logger = "^0.6.2"
nalgebra-glm = "^0.4.2"

[dev-dependencies]
serde_json = "^1.0.40"
test-generator = "^0.3.0"
