[package]
name = "swf-renderer"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF renderer"
documentation = "https://github.com/open-flash/swf-renderer"
homepage = "https://github.com/open-flash/swf-renderer"
repository = "https://github.com/open-flash/swf-renderer"
readme = "./README.md"
keywords = ["renderer", "swf", "flash", "gfx"]
categories = ["wasm"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
name = "swf_renderer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "swf-renderer"
path = "src/main.rs"

[dependencies]
log = "^0.4.8"
lyon = "^0.14.1"
swf-tree = "^0.8.0"
gfx-hal = {git = "https://github.com/gfx-rs/gfx.git", rev="8c8c3cd0da39fc64aeac6fb1bb5d5864bb33d2df"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gfx-backend-vulkan = {git = "https://github.com/gfx-rs/gfx.git", rev="8c8c3cd0da39fc64aeac6fb1bb5d5864bb33d2df", features = ["x11"]}
shaderc = { version = "^0.6.1", features = ["build-from-source"] }
env_logger = "^0.6.2"
nalgebra-glm = "^0.4.2"
winit = "^0.20.0-alpha3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gfx-backend-gl = {git = "https://github.com/gfx-rs/gfx.git", rev="8c8c3cd0da39fc64aeac6fb1bb5d5864bb33d2df"}
wasm-bindgen = "^0.2.51"
console_error_panic_hook = "^0.1.6"
console_log = "^0.1.2"
web-sys = {version = "^0.3.28", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]}

[dev-dependencies]
serde_json = "^1.0.40"
test-generator = "^0.3.0"

[profile.release]
# Enable Link Time Optimization (LTO) in release mode.
lto = true
